test/validation/var/test-declare-var-invalid-type/p.pas
program test_declare_var_invalid_type;
type t = integer;
const c = 1;
var
    i, j: t;
    k, l: c;
begin
end.
