test/error/ptr/test-at-const/p.pas
program test_at_const;
const a = 1;
var b: ^integer;
begin
    b := @a;
end.
